fix: adjust env variables

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Configuration
 
-JWT_SECRET="qualquer senha secreta aqui"
+JWT_SECRET="123456"
 
 # Database
 
-DATABASE_URL=""
+DATABASE_URL="mongodb+srv://brumsilva:Brun1997.@clusterdemo.39gxlfq.mongodb.net/"
