fix: adjust variables to deploy

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ JWT_SECRET="123456"
 # Database
 
 DATABASE_URL="mongodb+srv://brumsilva:Brun1997.@clusterdemo.39gxlfq.mongodb.net/"
+
+#PORT
+
+PORT=3000
