fix: adjust .env variables

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Configuration
 
-JWT_SECRET="123456"
+JWT_SECRET=123456
 
 # Database
 
-DATABASE_URL="mongodb+srv://brumsilva:Brun1997.@clusterdemo.39gxlfq.mongodb.net/"
+DATABASE_URL=mongodb+srv://brumsilva:Brun1997.@clusterdemo.39gxlfq.mongodb.net/
 
 #PORT
 
